--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
                 <button id="say">Say</button>
             </div>
         </div>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="src/client.js"></script>
     </body>
 </html>
